--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,51 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Clients & Orders</title>
+  <link rel="stylesheet" href="styles.css"/>
+</head>
+<body>
+  <header><h1>Clients & Orders</h1></header>
+  <main>
+    <section class="card">
+      <h2>Nuevo cliente</h2>
+      <form id="client-form">
+        <label>Nombre <input name="name" required></label>
+        <label>Email <input name="email" type="email" required></label>
+        <label>Teléfono <input name="phone" required></label>
+        <button type="submit">Agregar</button>
+      </form>
+      <p id="client-msg" class="msg"></p>
+    </section>
+    <section class="card">
+      <h2>Clientes</h2>
+      <table id="clients-table">
+        <thead><tr><th>Id</th><th>Nombre</th><th>Email</th><th>Teléfono</th><th>Acción</th></tr></thead>
+        <tbody id="clients-body"></tbody>
+      </table>
+    </section>
+    <section class="card">
+      <h2>Nueva orden</h2>
+      <form id="order-form">
+        <label>Cliente <select name="client_id" id="client-select" required></select></label>
+        <label>Platillo <input name="dish_name" required></label>
+        <label>Notas <textarea name="notes" rows="2"></textarea></label>
+        <button type="submit">Crear orden</button>
+      </form>
+      <p id="order-msg" class="msg"></p>
+    </section>
+    <section class="card">
+      <h2>Órdenes del cliente</h2>
+      <div id="selected-client"></div>
+      <table id="orders-table">
+        <thead><tr><th>Platillo</th><th>Notas</th><th>Estado</th><th>Creado</th><th>Acción</th></tr></thead>
+        <tbody id="orders-body"></tbody>
+      </table>
+    </section>
+  </main>
+  <footer><small>Node.js + PostgreSQL + HTML/CSS/JS — Render ready</small></footer>
+  <script src="app.js"></script>
+</body>
+</html>
